update: code quality